--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,5 @@
 * CHESS ENGINE
-** TODO BOARD REPRESENTATION
-** TODO ATTACK GENERATION
+** DONE BOARD REPRESENTATION
+** DONE ATTACK GENERATION
 ** TODO MOVE GENERATION
 ** TODO MOVE EVALUTION
