working on optimizing the move generation

--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,5 @@
 * CHESS ENGINE
 ** DONE BOARD REPRESENTATION
 ** DONE ATTACK GENERATION
-** TODO MOVE GENERATION
+** DONE MOVE GENERATION
 ** TODO MOVE EVALUTION
