null move pruning, and other stuff, starting to work on transposition tables

--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,3 @@
-* CHESS ENGINE
-** DONE BOARD REPRESENTATION
-** DONE ATTACK GENERATION
-** DONE MOVE GENERATION
-** TODO MOVE EVALUTION
+* KILLER/HISTORY MOVES
+* PVS
+* NULL MOVES
